Add oox to build side, for cross compilation
With 522dfe3da166ff74a1664334923f1ef304750536, cui now depends on oox
generated headers, so we need to build oox too, for cross builds.

Change-Id: I1af3116ab35c5094c23db3ed3dccd90c80080cef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143975
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/configure.ac
+++ b/configure.ac
@@ -5797,6 +5797,7 @@ if test "$cross_compiling" = "yes"; then
         LIBXSLT
         MDDS
         NATIVE
+        OOX
         OPENSSL
         ORCUS
         PYTHON
