--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -145,7 +145,7 @@ export ENABLE_CIPHER_OPENSSL_BACKEND=@ENABLE_CIPHER_OPENSSL_BACKEND@
 export ENABLE_CLUCENE=@ENABLE_CLUCENE@
 export ENABLE_LIBCMIS=@ENABLE_LIBCMIS@
 export ENABLE_COINMP=@ENABLE_COINMP@
-export SYSTEM_COINMP=@SYSTEM_COINMP@
+SYSTEM_COINMP=@SYSTEM_COINMP@
 export COINMP_CFLAGS=@COINMP_CFLAGS@
 export COINMP_LIBS=@COINMP_LIBS@
 export ENABLE_CUPS=@ENABLE_CUPS@
@@ -154,7 +154,7 @@ export ENABLE_DBGUTIL=@ENABLE_DBGUTIL@
 export ENABLE_DBUS=@ENABLE_DBUS@
 export ENABLE_DCONF=@ENABLE_DCONF@
 export ENABLE_DEBUG=@ENABLE_DEBUG@
-export SYSTEM_DRAGONBOX=@SYSTEM_DRAGONBOX@
+SYSTEM_DRAGONBOX=@SYSTEM_DRAGONBOX@
 export ENABLE_EPOXY=@ENABLE_EPOXY@
 export ENABLE_EOT=@ENABLE_EOT@
 export ENABLE_EVOAB2=@ENABLE_EVOAB2@
@@ -601,93 +601,94 @@ export STAROFFICE_LIBS=$(gb_SPACE)@STAROFFICE_LIBS@
 export STRIP=@STRIP@
 export STRIP_COMPONENTS=@STRIP_COMPONENTS@
 export SYSBASE=@SYSBASE@
-export SYSTEM_ABSEIL=@SYSTEM_ABSEIL@
+SYSTEM_ABSEIL=@SYSTEM_ABSEIL@
 export ABSEIL_CFLAGS=@ABSEIL_CFLAGS@
 export ABSEIL_LIBS=@ABSEIL_LIBS@
-export SYSTEM_ABW=@SYSTEM_ABW@
-export SYSTEM_BLUEZ=@SYSTEM_BLUEZ@
-export SYSTEM_BOOST=@SYSTEM_BOOST@
-export SYSTEM_BSH=@SYSTEM_BSH@
-export SYSTEM_BOX2D=@SYSTEM_BOX2D@
-export SYSTEM_BZIP2=@SYSTEM_BZIP2@
-export SYSTEM_CAIRO=@SYSTEM_CAIRO@
-export SYSTEM_CLUCENE=@SYSTEM_CLUCENE@
-export SYSTEM_CPPUNIT=@SYSTEM_CPPUNIT@
-export SYSTEM_CURL=@SYSTEM_CURL@
-export SYSTEM_DICTS=@SYSTEM_DICTS@
-export SYSTEM_EXPAT=@SYSTEM_EXPAT@
-export SYSTEM_FONTCONFIG=@SYSTEM_FONTCONFIG@
-export SYSTEM_FREETYPE=@SYSTEM_FREETYPE@
-export SYSTEM_FIREBIRD=@SYSTEM_FIREBIRD@
-export SYSTEM_GENBRK=@SYSTEM_GENBRK@
-export SYSTEM_GENCCODE=@SYSTEM_GENCCODE@
-export SYSTEM_GENCMN=@SYSTEM_GENCMN@
-export SYSTEM_EPOXY=@SYSTEM_EPOXY@
-export SYSTEM_GLM=@SYSTEM_GLM@
-export SYSTEM_GPGMEPP=@SYSTEM_GPGMEPP@
-export SYSTEM_GRAPHITE=@SYSTEM_GRAPHITE@
-export SYSTEM_HARFBUZZ=@SYSTEM_HARFBUZZ@
-export SYSTEM_HSQLDB=@SYSTEM_HSQLDB@
-export SYSTEM_HUNSPELL=@SYSTEM_HUNSPELL@
-export SYSTEM_HYPH=@SYSTEM_HYPH@
-export SYSTEM_ICU=@SYSTEM_ICU@
-export SYSTEM_JFREEREPORT=@SYSTEM_JFREEREPORT@
-export SYSTEM_LIBJPEG=@SYSTEM_LIBJPEG@
-export SYSTEM_LCMS2=@SYSTEM_LCMS2@
-export SYSTEM_CDR=@SYSTEM_CDR@
-export SYSTEM_LIBCMIS=@SYSTEM_LIBCMIS@
-export SYSTEM_EBOOK=@SYSTEM_EBOOK@
-export SYSTEM_ETONYEK=@SYSTEM_ETONYEK@
-export SYSTEM_EPUBGEN=@SYSTEM_EPUBGEN@
-export SYSTEM_FREEHAND=@SYSTEM_FREEHAND@
-export SYSTEM_LIBATOMIC_OPS=@SYSTEM_LIBATOMIC_OPS@
-export SYSTEM_LIBEOT=@SYSTEM_LIBEOT@
-export SYSTEM_LIBEXTTEXTCAT=@SYSTEM_LIBEXTTEXTCAT@
-export SYSTEM_LIBEXTTEXTCAT_DATA=@SYSTEM_LIBEXTTEXTCAT_DATA@
-export SYSTEM_LIBFIXMATH=@SYSTEM_LIBFIXMATH@
-export SYSTEM_LIBLANGTAG=@SYSTEM_LIBLANGTAG@
-export SYSTEM_LIBNUMBERTEXT=@SYSTEM_LIBNUMBERTEXT@
-export SYSTEM_LIBNUMBERTEXT_DATA=@SYSTEM_LIBNUMBERTEXT_DATA@
-export SYSTEM_LIBORCUS=@SYSTEM_LIBORCUS@
-export SYSTEM_LIBPNG=@SYSTEM_LIBPNG@
-export SYSTEM_LIBTIFF=@SYSTEM_LIBTIFF@
-export SYSTEM_LIBTOMMATH=@SYSTEM_LIBTOMMATH@
-export SYSTEM_LIBWEBP=@SYSTEM_LIBWEBP@
-export SYSTEM_LIBXML=@SYSTEM_LIBXML@
-export SYSTEM_LIBXML_FOR_BUILD=@SYSTEM_LIBXML_FOR_BUILD@
-export SYSTEM_LIBXSLT=@SYSTEM_LIBXSLT@
-export SYSTEM_LIBXSLT_FOR_BUILD=@SYSTEM_LIBXSLT_FOR_BUILD@
-export SYSTEM_LPSOLVE=@SYSTEM_LPSOLVE@
-export SYSTEM_MDDS=@SYSTEM_MDDS@
-export SYSTEM_MARIADB_CONNECTOR_C=@SYSTEM_MARIADB_CONNECTOR_C@
-export SYSTEM_MSPUB=@SYSTEM_MSPUB@
-export SYSTEM_MWAW=@SYSTEM_MWAW@
-export SYSTEM_MYTHES=@SYSTEM_MYTHES@
-export SYSTEM_NSS=@SYSTEM_NSS@
-export SYSTEM_ODBC_HEADERS=@SYSTEM_ODBC_HEADERS@
-export SYSTEM_ODFGEN=@SYSTEM_ODFGEN@
-export SYSTEM_OPENJPEG2=@SYSTEM_OPENJPEG2@
+SYSTEM_ABW=@SYSTEM_ABW@
+SYSTEM_BLUEZ=@SYSTEM_BLUEZ@
+# FIXME: concat-deps reads SYSTEM_BOOST from env
+SYSTEM_BOOST=@SYSTEM_BOOST@
+SYSTEM_BSH=@SYSTEM_BSH@
+SYSTEM_BOX2D=@SYSTEM_BOX2D@
+SYSTEM_BZIP2=@SYSTEM_BZIP2@
+SYSTEM_CAIRO=@SYSTEM_CAIRO@
+SYSTEM_CLUCENE=@SYSTEM_CLUCENE@
+SYSTEM_CPPUNIT=@SYSTEM_CPPUNIT@
+SYSTEM_CURL=@SYSTEM_CURL@
+SYSTEM_DICTS=@SYSTEM_DICTS@
+SYSTEM_EXPAT=@SYSTEM_EXPAT@
+SYSTEM_FONTCONFIG=@SYSTEM_FONTCONFIG@
+SYSTEM_FREETYPE=@SYSTEM_FREETYPE@
+SYSTEM_FIREBIRD=@SYSTEM_FIREBIRD@
+SYSTEM_GENBRK=@SYSTEM_GENBRK@
+SYSTEM_GENCCODE=@SYSTEM_GENCCODE@
+SYSTEM_GENCMN=@SYSTEM_GENCMN@
+SYSTEM_EPOXY=@SYSTEM_EPOXY@
+SYSTEM_GLM=@SYSTEM_GLM@
+SYSTEM_GPGMEPP=@SYSTEM_GPGMEPP@
+SYSTEM_GRAPHITE=@SYSTEM_GRAPHITE@
+SYSTEM_HARFBUZZ=@SYSTEM_HARFBUZZ@
+SYSTEM_HSQLDB=@SYSTEM_HSQLDB@
+SYSTEM_HUNSPELL=@SYSTEM_HUNSPELL@
+SYSTEM_HYPH=@SYSTEM_HYPH@
+SYSTEM_ICU=@SYSTEM_ICU@
+SYSTEM_JFREEREPORT=@SYSTEM_JFREEREPORT@
+SYSTEM_LIBJPEG=@SYSTEM_LIBJPEG@
+SYSTEM_LCMS2=@SYSTEM_LCMS2@
+SYSTEM_CDR=@SYSTEM_CDR@
+SYSTEM_LIBCMIS=@SYSTEM_LIBCMIS@
+SYSTEM_EBOOK=@SYSTEM_EBOOK@
+SYSTEM_ETONYEK=@SYSTEM_ETONYEK@
+SYSTEM_EPUBGEN=@SYSTEM_EPUBGEN@
+SYSTEM_FREEHAND=@SYSTEM_FREEHAND@
+SYSTEM_LIBATOMIC_OPS=@SYSTEM_LIBATOMIC_OPS@
+SYSTEM_LIBEOT=@SYSTEM_LIBEOT@
+SYSTEM_LIBEXTTEXTCAT=@SYSTEM_LIBEXTTEXTCAT@
+SYSTEM_LIBEXTTEXTCAT_DATA=@SYSTEM_LIBEXTTEXTCAT_DATA@
+SYSTEM_LIBFIXMATH=@SYSTEM_LIBFIXMATH@
+SYSTEM_LIBLANGTAG=@SYSTEM_LIBLANGTAG@
+SYSTEM_LIBNUMBERTEXT=@SYSTEM_LIBNUMBERTEXT@
+SYSTEM_LIBNUMBERTEXT_DATA=@SYSTEM_LIBNUMBERTEXT_DATA@
+SYSTEM_LIBORCUS=@SYSTEM_LIBORCUS@
+SYSTEM_LIBPNG=@SYSTEM_LIBPNG@
+SYSTEM_LIBTIFF=@SYSTEM_LIBTIFF@
+SYSTEM_LIBTOMMATH=@SYSTEM_LIBTOMMATH@
+SYSTEM_LIBWEBP=@SYSTEM_LIBWEBP@
+SYSTEM_LIBXML=@SYSTEM_LIBXML@
+SYSTEM_LIBXML_FOR_BUILD=@SYSTEM_LIBXML_FOR_BUILD@
+SYSTEM_LIBXSLT=@SYSTEM_LIBXSLT@
+SYSTEM_LIBXSLT_FOR_BUILD=@SYSTEM_LIBXSLT_FOR_BUILD@
+SYSTEM_LPSOLVE=@SYSTEM_LPSOLVE@
+SYSTEM_MDDS=@SYSTEM_MDDS@
+SYSTEM_MARIADB_CONNECTOR_C=@SYSTEM_MARIADB_CONNECTOR_C@
+SYSTEM_MSPUB=@SYSTEM_MSPUB@
+SYSTEM_MWAW=@SYSTEM_MWAW@
+SYSTEM_MYTHES=@SYSTEM_MYTHES@
+SYSTEM_NSS=@SYSTEM_NSS@
+SYSTEM_ODBC_HEADERS=@SYSTEM_ODBC_HEADERS@
+SYSTEM_ODFGEN=@SYSTEM_ODFGEN@
+SYSTEM_OPENJPEG2=@SYSTEM_OPENJPEG2@
 export OPENJPEG2_CFLAGS=@OPENJPEG2_CFLAGS@
 export OPENJPEG2_LIBS=@OPENJPEG2_LIBS@
-export SYSTEM_OPENLDAP=@SYSTEM_OPENLDAP@
-export SYSTEM_OPENSSL=@SYSTEM_OPENSSL@
-export SYSTEM_PAGEMAKER=@SYSTEM_PAGEMAKER@
-export SYSTEM_POPPLER=@SYSTEM_POPPLER@
-export SYSTEM_POSTGRESQL=@SYSTEM_POSTGRESQL@
-export SYSTEM_PYTHON=@SYSTEM_PYTHON@
-export SYSTEM_ZXING=@SYSTEM_ZXING@
-export SYSTEM_QXP=@SYSTEM_QXP@
-export SYSTEM_REDLAND=@SYSTEM_REDLAND@
-export SYSTEM_REVENGE=@SYSTEM_REVENGE@
-export SYSTEM_RHINO=@SYSTEM_RHINO@
-export SYSTEM_STAROFFICE=@SYSTEM_STAROFFICE@
-export SYSTEM_VISIO=@SYSTEM_VISIO@
-export SYSTEM_WPD=@SYSTEM_WPD@
-export SYSTEM_WPG=@SYSTEM_WPG@
-export SYSTEM_WPS=@SYSTEM_WPS@
-export SYSTEM_XMLSEC=@SYSTEM_XMLSEC@
-export SYSTEM_ZLIB=@SYSTEM_ZLIB@
-export SYSTEM_ZMF=@SYSTEM_ZMF@
+SYSTEM_OPENLDAP=@SYSTEM_OPENLDAP@
+SYSTEM_OPENSSL=@SYSTEM_OPENSSL@
+SYSTEM_PAGEMAKER=@SYSTEM_PAGEMAKER@
+SYSTEM_POPPLER=@SYSTEM_POPPLER@
+SYSTEM_POSTGRESQL=@SYSTEM_POSTGRESQL@
+SYSTEM_PYTHON=@SYSTEM_PYTHON@
+SYSTEM_ZXING=@SYSTEM_ZXING@
+SYSTEM_QXP=@SYSTEM_QXP@
+SYSTEM_REDLAND=@SYSTEM_REDLAND@
+SYSTEM_REVENGE=@SYSTEM_REVENGE@
+SYSTEM_RHINO=@SYSTEM_RHINO@
+SYSTEM_STAROFFICE=@SYSTEM_STAROFFICE@
+SYSTEM_VISIO=@SYSTEM_VISIO@
+SYSTEM_WPD=@SYSTEM_WPD@
+SYSTEM_WPG=@SYSTEM_WPG@
+SYSTEM_WPS=@SYSTEM_WPS@
+SYSTEM_XMLSEC=@SYSTEM_XMLSEC@
+SYSTEM_ZLIB=@SYSTEM_ZLIB@
+SYSTEM_ZMF=@SYSTEM_ZMF@
 export TARFILE_LOCATION=@TARFILE_LOCATION@
 export TESTINSTALLDIR=@TESTINSTALLDIR@
 export THES_SYSTEM_DIR=@THES_SYSTEM_DIR@
