--- a/config_host/config_vclplug.h.in
+++ b/config_host/config_vclplug.h.in
@@ -26,6 +26,7 @@ Settings about which desktops have support enabled.
 /**
  * Additional settings for the plugins
  */
+#define USE_HEADLESS_CODE 0
 #define ENABLE_GSTREAMER_1_0 0
 #define QT5_HAVE_GOBJECT 0
 #define QT5_USING_X11 0
