android: Include Impress's layout.xml into app
It's needed since

    commit 005bec33d475edfaa85801af225f9857275a7df8
    Date:   Tue Nov 22 14:07:12 2022 +0200

        sd: replace hardcoded table styles with xml file

Without it being included into the app/APK, opening
any presentation in Android Viewer file would fail, with
this in ADB log:

    12-27 10:22:45.329  9811  9862 E libo:sal/osl/unx/file: failed to open /assets/share/config/soffice.cfg/simpress/styles.xml
    12-27 10:22:45.332  9811  9862 W svl.items: 1:svl/source/items/itempool.cxx:442: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
    12-27 10:22:45.337  9811  9862 I LOKitTileProvider: ====> mOffice.documentLoad() returned null, trying to restart 'Office' and loading again

Change-Id: I677476bda146be2cd3ebe18da91bcb8f2a796fd3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144835
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -139,11 +139,12 @@ task copyAssets(type: Copy) {
     description "copies assets that can be accessed within the installed apk"
     into 'assets'
 
-    // include icons
+    // include icons and Impress styles
     into ('share') {
         into ('config') {
             from ("${liboInstdir}/share/config")
-            includes = ['images_**.zip']
+            includes = ['images_**.zip',
+                        '**/simpress/styles.xml']
         }
     }
 
