android: Set namespace in build.gradle instead of manifest
Switch from the now deprecated way, as mentioned in

    commit 7347d911fa295c31262a0f576c5b2f3f14ce017d
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Fri Dec 23 18:29:44 2022 +0100

        android: Update  Android Gradle Plugin to 7.3.1

        ... and gradle to 7.4.

        Relevant entry from the release notes [1] that will be
        addressed in a follow-up commit:

        > # Package attribute in manifest file is deprecated
        >
        > Starting with AGP 7.3.0-alpha04, if you use Gradle to build your
        > project, AGP generates a warning if you use the package attribute in the
        > manifest file. To set the namespace for your app, use the namespace
        > property in the module-level build.gradle file. To learn more, see Set a
        > namespace
        > [https://developer.android.com/studio/build/configure-app-module#set-namespace].
        >
        > To get help moving to the new namespace DSL, use the AGP Upgrade
        > Assistant (Tools > AGP Upgrade Assistant).

        [1] https://developer.android.com/studio/releases/gradle-plugin#7-3-0

        Change-Id: I8b196e53fb9b3fb7e9314719fdb7e0f2254abd10

Note that this is unrelated to the Android application ID [1]
that can be set with autogen param `--with-android-package-name`.

[1] https://developer.android.com/studio/build/configure-app-module#set-application-id

Change-Id: I146dab19228d83b1beb6408743c0232e1ba1d060
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144836
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 }
 
 android {
+    namespace 'org.libreoffice'
     compileSdkVersion 32
     // uses non-conventional source layout, so need to reconfigure accordingly
     // ToDo move to conventional layout, so stuff can be stripped down.
