--- a/android/source/AndroidManifest.xml
+++ b/android/source/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:installLocation="${installLocation}"
-    package="org.libreoffice">
+    android:installLocation="${installLocation}">
 
     <!-- App requires OpenGL ES 2.0 -->
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
