android: Enable multidex, update com.google.android.material to 1.7.0
Release notes:
https://github.com/material-components/material-components-android/releases/tag/1.7.0

With the material update in place, multidex needs to be enabled since the
app has minSdkVersion 16 (i.e. smaller than 21) and now references
more then 65,536 methods, see [1] for more background.

Therefore, carry out the changes to support multidex
as mentioned in [2].

Without enabling multidex, the build would fail like this:

    > Task :mergeExtDexStrippedUIDebug FAILED
    ERROR:D8: Cannot fit requested classes in a single dex file (# methods: 68864 > 65536)
    com.android.builder.dexing.DexArchiveMergerException: Error while merging dex archives:
    The number of method references in a .dex file cannot exceed 64K.
    Learn how to resolve this issue at https://developer.android.com/tools/building/multidex.html
            at com.android.builder.dexing.D8DexArchiveMerger.getExceptionToRethrow(D8DexArchiveMerger.java:151)
            at com.android.builder.dexing.D8DexArchiveMerger.mergeDexArchives(D8DexArchiveMerger.java:138)
            at com.android.build.gradle.internal.tasks.DexMergingWorkAction.merge(DexMergingTask.kt:859)
            at com.android.build.gradle.internal.tasks.DexMergingWorkAction.run(DexMergingTask.kt:805)
            at com.android.build.gradle.internal.profile.ProfileAwareWorkAction.execute(ProfileAwareWorkAction.kt:74)
            at org.gradle.workers.internal.DefaultWorkerServer.execute(DefaultWorkerServer.java:63)
            at org.gradle.workers.internal.NoIsolationWorkerFactory$1$1.create(NoIsolationWorkerFactory.java:66)
            at org.gradle.workers.internal.NoIsolationWorkerFactory$1$1.create(NoIsolationWorkerFactory.java:62)
            at org.gradle.internal.classloader.ClassLoaderUtils.executeInClassloader(ClassLoaderUtils.java:97)
            at org.gradle.workers.internal.NoIsolationWorkerFactory$1.lambda$execute$0(NoIsolationWorkerFactory.java:

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -26,8 +26,9 @@ dependencies {
             "libreoffice.jar",
             "unoloader.jar"
     ])
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.multidex:multidex:2.0.1"
 }
 
 android {
@@ -49,6 +50,9 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 33
+        // multidex needed when > 65,536 methods referenced with minSdKVersion < 21
+        // s. https://developer.android.com/studio/build/multidex
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
