tdf#153009 android: Set BRAND_SHARE_SUBDIR for more default structure
Set `BRAND_SHARE_SUBDIR=share` in the `fundamentalrc`
shipped with Android Viewer, as is the case for the
desktop variant as well. This implies that
the .ui files will be expected underneath the "config/share"
directory in the app's assets from now on instead of just
"config", since `BRAND_SHARE_SUBDIR` will be expanded accordingly
in the paths.
Therefore, put the .ui files there. Merge the block responsible
for copying UI files into into the existing block already copying to
that dir in the `copyTask` gradle task.

There seems to be no particular reason for omitting
the "share" subdirectory just for the .ui files in the Android
assets.

This is also in preparation of fixing tdf#153009:
Not having `BRAND_SHARE_SUBDIR` set on Android resulted
in

    "vnd.sun.star.expand:$BRAND_BASE_DIR/$BRAND_SHARE_SUBDIR/config/soffice.cfg/simpress/objectlist.xml"

previously getting expanded to

    file:///assets//config/soffice.cfg/simpress/objectlist.xml

in `SdDrawDocument::InitObjectVector`, and that would cause
failure to read object property settings (e.g. for the placeholder
text in a new Impress presentation) from that file, even
when `objectlist.xml` was put into the app's assets
(s. Change-Id Iba1ac68c0b983d3e465515f07b3fc67162a0ee3f,
"tdf#153009 android: Include more doc layout related XML files")
at "config/soffice.cfg/simpress/objectlist.xml" due to the
double-slash after "assets" not being treated the same way
as a single slash at that place.

Change-Id: Ia9d86e1f59daf8a41951cefb3a1e9f82f0e9f184
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145619
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -144,12 +144,20 @@ task copyAssets(type: Copy) {
     description "copies assets that can be accessed within the installed apk"
     into 'assets'
 
-    // include icons and Impress styles
+    // include icons, Impress styles and required .ui files
     into ('share') {
         into ('config') {
             from ("${liboInstdir}/share/config")
             includes = ['images_**.zip',
-                        '**/simpress/styles.xml']
+                        '**/simpress/styles.xml',
+                        '**/annotation.ui',
+                        '**/hfmenubutton.ui',
+                        '**/inforeadonlydialog.ui',
+                        '**/pbmenubutton.ui',
+                        '**/scrollbars.ui',
+                        '**/tabbuttons.ui',
+                        '**/tabviewbar.ui'
+                        ]
         }
     }
 
@@ -173,16 +181,6 @@ task copyAssets(type: Copy) {
         from("${liboWorkdir}/CustomTarget/i18npool/breakiterator/") {
             include '*.data'
         }
-    }
-    // include required .ui files
-    into('config') {
-        from "${liboInstdir}/share/config"
-        include '**/annotation.ui',
-                '**/hfmenubutton.ui',
-                '**/inforeadonlydialog.ui',
-                '**/pbmenubutton.ui',
-                '**/scrollbars.ui',
-                '**/tabbuttons.ui', '**/tabviewbar.ui'
     }
 }
 
@@ -265,6 +263,7 @@ task createRCfiles {
             [Bootstrap]
             LO_LIB_DIR=file://$APP_DATA_DIR/lib/
             BRAND_BASE_DIR=file:///assets
+            BRAND_SHARE_SUBDIR=share
             CONFIGURATION_LAYERS=xcsxcu:${BRAND_BASE_DIR}/share/registry res:${BRAND_BASE_DIR}/share/registry
             URE_BIN_DIR=file:///assets/ure/bin/dir/nothing-here/we-can/exec-anyway
             '''.stripIndent()
