tdf#45854 sysui: replace wrong ODB mime type
https://issues.oasis-open.org/browse/OFFICE-3745 was resolved.

Replace all wrong:
application/vnd.oasis.opendocument.database
with:
application/vnd.oasis.opendocument.base

There is an identifier "org.oasis-open.opendocument.database"
being used in some MacOSX Info.plist files - there is no indication that
it needs to "match" the mime-type so leave it as is.

Change-Id: Ic8e0d24e3aa74743801a670846daf2d322c33d70
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146040
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>

--- a/sysui/desktop/menus/base.desktop
+++ b/sysui/desktop/menus/base.desktop
@@ -22,7 +22,7 @@ Icon=base
 Type=Application
 Categories=Office;Database;X-Red-Hat-Base;
 Exec=${UNIXBASISROOTNAME} --base %%FILE%%
-MimeType=application/vnd.oasis.opendocument.database;application/vnd.sun.xml.base;
+MimeType=application/vnd.oasis.opendocument.base;application/vnd.sun.xml.base;
 Name=%PRODUCTNAME Base
 GenericName=Database Development
 Comment=Manage databases, create queries and reports to track and manage your information.
