--- a/sysui/desktop/macosx/Info.plist.in
+++ b/sysui/desktop/macosx/Info.plist.in
@@ -688,7 +688,7 @@
                 </array>
                 <key>public.mime-type</key>
                 <array>
-                    <string>application/vnd.oasis.opendocument.database</string>
+                    <string>application/vnd.oasis.opendocument.base</string>
                 </array>
             </dict>
             <key>UTTypeIconFile</key>
